Corrige caminhos relativos de CSS e JS para GitHub Pages

--- a/inicial/index.html
+++ b/inicial/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Rodrigo.dev</title>
-    <link rel="stylesheet" href="inicial.css">
+    <link rel="stylesheet" href="./index.css">
+
 </head>
 <body>
     <div class="binary-background" id="binaryBg"></div>
@@ -18,6 +19,6 @@
 <div class="no-overlay" id="noOverlay">
     <button class="btn no" id="noBtn">NÃO</button>
 </div>
-    <script src="inicial.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
